fixed the navigations are getting clicked even when they are not visible

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -57,7 +57,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1500;
+    z-index: -1;
     width: 0;
     opacity: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -114,6 +114,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+    z-index: 1500;
   }
 
   // Icon
